# kompress

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  cliff.toml  index.html  index.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.husky/: commit-msg  pre-commit  pre-push
backend/: main.js
backend/processors/: imageProcessor.js  videoProcessor.js
backend/utils/: ffmpegUtils.js
scripts/: copy-release.js  release.js  rename-dmg.js  sign-and-copy-release.js  verify-conversions.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ConsoleDrawer.tsx  DropArea.tsx  DropZone.tsx  FileList.tsx  Header.tsx  SettingsDrawer.tsx  ThemeToggle.tsx  UpdateBadge.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  drawer.tsx  format-badge.tsx  icon-button.tsx  progress.tsx  slider.tsx
src/constants/: formats.test.ts  formats.ts
src/hooks/: useDragAndDrop.ts  useFileProcessor.ts  useSettings.test.ts  useSettings.ts  useUpdater.ts
src/lib/: utils.ts
src/types/: ipc.ts
src/utils/: fileUtils.test.ts  fileUtils.ts
tests/fixtures/: README.md
tests/fixtures/audio/: armstrong.aac  armstrong.flac  armstrong.m4a  armstrong.wma
(+3 files in other folders)
