[package]
name = "kompress"
version = "0.0.1"
description = "A simple multimedia file compressor for macOS"
authors = ["Sam Kasman"]
license = "MIT"
repository = "https://github.com/samkasman/kompress"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

