[package]
name = "kompress"
version = "0.0.1"
description = "A simple multimedia file compressor for macOS"
authors = ["Sam Kasman"]
license = "MIT"
repository = "https://github.com/samkasman/kompress"
edition = "2021"

# Rust crate versions must match the @tauri-apps/* npm package minors
# (see CLAUDE.md). Tauri's build refuses to compile on minor-level drift.
[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

